--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,12 +1,21 @@
 <%= render 'users/navbar' %>
 
+<h1>Pending matches</h1>
+
 <% @pending_matches.each do |match| %>
-  <div class="match-notification">
-    <p><%= match.initiated_by.first_name %> vous propose un match !</p>
+  <div class="match-notification" data-controller="manage-matches" data-manage-matches-match-value="<%= match.to_json %>" >
+    <p><span class="text-primary"><%= match.initiated_by.first_name %></span> vous propose un match !</p>
 
     <div>
-      <button class="btn btn-secondary">Accepter</button>
-      <button class="btn btn-primary">Refuser</button>
+      <button class="btn btn-secondary" value="accept" data-action="click->manage-matches#accept_or_refuse_match">Accepter</button>
+      <button class="btn btn-primary" value="refuse" data-action="click->manage-matches#accept_or_refuse_match">Refuser</button>
     </div>
+  </div>
+<% end %>
+
+<h1>Accepted matches</h1>
+<% @accepted_matches.each do |match| %>
+  <div class="match-notification" >
+    <p><span class="text-primary"><%= match.initiated_by.first_name %></span> : c'est un match !</p>
   </div>
 <% end %>
