--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,7 @@
 <%= render 'navbar' %>
 
+<%= tag.meta name: "mapbox-access-token", content: Rails.application.credentials.dig(:mapbox, :access_token) %>
+
 <div class="container">
   <!-- Greetings -->
   <% if @user.aupair? %>
@@ -22,62 +24,66 @@
   <%= render 'profile_picture_modal' %>
 
   <!-- Première ligne contenant les deux sous-formulaires côte à côte -->
-  <div class="row d-flex align-items-stretch mt-5">
+  <div class="row gx-3 d-flex align-items-stretch mt-5">
     <!-- Première colonne: Basic Information -->
     <div class="col-md-4 d-flex flex-column">
-      <h3>Basic Information</h3>
-      <%= form_with model: @user, url: user_path(@user), method: :patch, local: true do |form| %>
-        <% if @user.aupair? %>
+      <div class="form-item">
+        <h3>Basic Information</h3>
+        <%= form_with model: @user, url: user_path(@user), method: :patch, local: true do |form| %>
+          <% if @user.aupair? %>
+            <div class="form-group">
+              <%= form.label :first_name, "First Name" %>
+              <%= form.text_field :first_name, class: "form-control" %>
+            </div>
+          <% end %>
+
           <div class="form-group">
-            <%= form.label :first_name, "First Name" %>
-            <%= form.text_field :first_name, class: "form-control" %>
+            <%= form.label :last_name, "Last Name" %>
+            <%= form.text_field :last_name, class: "form-control" %>
           </div>
+
+          <% if @user.aupair? %>
+            <div class="form-group">
+              <%= form.label :birth_date, "Birth Date", class: "form-label" %>
+              <input type="date" name="user[birth_date]" id="birth_date" class="form-control" value="<%= @user.birth_date %>">
+            </div>
+
+            <div class="form-group">
+              <%= form.label :gender, "Gender", class: "form-label" %>
+              <%= form.select :gender, [['Select Gender', ''], ['Male', 'male'], ['Female', 'female']], { selected: @user.gender }, { class: "selectpicker w-100"} %>
+            </div>
+          <% end %>
+
+          <% if @user.family? %>
+            <div class="form-group">
+              <%= form.label :number_of_children, "Number of Children" %>
+              <%= form.number_field :number_of_children, class: "form-control" %>
+            </div>
+          <% end %>
+
+          <%= form.submit "Update Basic Information", class: "btn btn-outline-primary mt-3" %>
         <% end %>
-
-        <div class="form-group">
-          <%= form.label :last_name, "Last Name" %>
-          <%= form.text_field :last_name, class: "form-control" %>
-        </div>
-
-        <% if @user.aupair? %>
-          <div class="form-group">
-            <%= form.label :birth_date, "Birth Date", class: "form-label" %>
-            <input type="date" name="user[birth_date]" id="birth_date" class="form-control" value="<%= @user.birth_date %>">
-          </div>
-
-          <div class="form-group">
-            <%= form.label :gender, "Gender", class: "form-label" %>
-            <%= form.select :gender, [['Select Gender', ''], ['Male', 'male'], ['Female', 'female']], { selected: @user.gender }, { class: "selectpicker w-100"} %>
-          </div>
-        <% end %>
-
-        <% if @user.family? %>
-          <div class="form-group">
-            <%= form.label :number_of_children, "Number of Children" %>
-            <%= form.number_field :number_of_children, class: "form-control" %>
-          </div>
-        <% end %>
-
-        <%= form.submit "Update Basic Information", class: "btn btn-outline-primary mt-3" %>
-      <% end %>
+      </div>
     </div>
 
     <!-- Deuxième colonne: Description -->
     <div class="col-md-8 d-flex flex-column">
+      <div class="form-item d-flex flex-column flex-grow-1">
       <h3>Description</h3>
-      <%= form_with model: @user, url: user_path(@user), method: :patch, local: true, html: { class: "d-flex flex-column flex-grow-1" } do |form| %>
-        <div class="form-group d-flex flex-column flex-grow-1">
-          <%= form.label :description, "About you..." %>
-          <%= form.text_area :description, class: "form-control flex-grow-1" %>
-        </div>
+        <%= form_with model: @user, url: user_path(@user), method: :patch, local: true, html: { class: "d-flex flex-column flex-grow-1" } do |form| %>
+          <div class="form-group d-flex flex-column flex-grow-1">
+            <%= form.label :description, "About you..." %>
+            <%= form.text_area :description, class: "form-control flex-grow-1" %>
+          </div>
 
-        <%= form.submit "Update Description", class: "btn btn-outline-primary mt-3 w-50" %>
-      <% end %>
+          <%= form.submit "Update Description", class: "btn btn-outline-primary mt-3 w-50" %>
+        <% end %>
+      </div>
     </div>
   </div>
 
   <!-- Troisième partie: Nationalité et localisation -->
-  <div class="mt-5">
+  <div class="row gx-3 mt-5 form-item" data-controller="location">
     <h3>Nationality and Location</h3>
     <%= form_with model: @user, url: user_path(@user), method: :patch, local: true do |form| %>
       <div class="row">
@@ -88,15 +94,99 @@
           </div>
         </div>
 
+        <!-- Attacher le contrôleur Stimulus à un conteneur parent commun -->
         <div class="col-md-6">
           <div class="form-group">
             <%= form.label :location, "Location" %>
-            <%= form.text_field :location, class: "form-control" %>
+            <%= form.text_field :location, class: "form-control", id: "location-input", data: { location_target: "locationInput" } %>
           </div>
         </div>
       </div>
-    </div>
 
-    <%= form.submit "Update Nationality and Location", class: "btn btn-outline-primary mt-3" %>
-  <% end %>
+      <!-- Ajouter la carte dans le même conteneur contrôlé par Stimulus -->
+      <div class="row mt-3 mb-3">
+        <div id="map" style="width: calc(100% - 24px); height: 300px;" data-location-target="map"></div>
+      </div>
+
+      <%= form.submit "Update Nationality and Location", class: "btn btn-outline-primary mt-3" %>
+    <% end %>
+  </div>
+
+  <!-- Quatrième partie : Disponibilités et langues parlées -->
+  <div class="row gx-3 d-flex mt-5">
+    <div class="col-md-6">
+      <div class="form-item">
+        <h3>Your Availabilities</h3>
+        <ul class="list-group">
+          <% @user.availabilities.each do |availability| %>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span>
+                From <%= availability.start.strftime("%d %b %Y") %> to <%= availability.end.strftime("%d %b %Y") %>
+              </span>
+
+              <div>
+                <!-- Icône pour modifier la disponibilité -->
+                <a href="#" class="btn btn-sm btn-outline-primary edit-availability-btn" data-bs-toggle="modal" data-bs-target="#editAvailabilityModal-<%= availability.id %>">
+                  <i class="fas fa-edit"></i> Edit
+                </a>
+
+                <!-- Icône pour supprimer la disponibilité -->
+                <%= link_to user_path(@user), method: :patch, class: "btn btn-sm btn-outline-danger", data: { confirm: "Are you sure?" } do %>
+                  <i class="fas fa-trash-alt"></i> Delete
+                <% end %>
+              </div>
+            </li>
+
+            <!-- Modale de modification pour chaque disponibilité -->
+            <%= render 'availability_modification_modal', availability: availability %>
+          <% end %>
+        </ul>
+
+        <!-- Formulaire pour ajouter une nouvelle disponibilité -->
+        <h4 class="mt-5">Add Availability</h4>
+        <%= simple_form_for @user, url: user_path(@user), method: :patch, local: true do |f| %>
+          <%= f.simple_fields_for :availabilities, @user.availabilities.build do |new_availability_form| %>
+            <div class="form-group">
+              <!-- Datepicker HTML natif pour la date de début -->
+              <%= new_availability_form.input :start, as: :string, label: "Start Date", input_html: { type: 'date', class: "form-control" } %>
+            </div>
+
+            <div class="form-group">
+              <!-- Datepicker HTML natif pour la date de fin -->
+              <%= new_availability_form.input :end, as: :string, label: "End Date", input_html: { type: 'date', class: "form-control" } %>
+            </div>
+          <% end %>
+          <%= f.submit "Add Availability", class: "btn btn-outline-primary mt-3" %>
+        <% end %>
+      </div>
+    </div>
+    <div class="col-md-6 d-flex flex-column">
+      <div class="form-item d-flex flex-column flex-grow-1">
+        <h3>Spoken Languages</h3>
+        <!-- Liste des langues actuellement parlées -->
+        <ul class="list-group mb-3">
+          <% @user.languages.each do |language| %>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span><%= language.language %></span>
+              <!-- Icône pour supprimer une langue -->
+              <%= link_to remove_language_user_path(@user, language.id), method: :delete, class: "btn btn-sm btn-outline-danger", data: { confirm: "Are you sure?" } do %>
+                <i class="fas fa-trash-alt"></i> Remove
+              <% end %>
+            </li>
+          <% end %>
+        </ul>
+
+        <!-- Formulaire pour ajouter une nouvelle langue -->
+        <%= simple_form_for @user, url: add_language_user_path(@user), method: :post, local: true do |f| %>
+          <div class="form-group">
+            <%= f.label :language, "Add a language" %>
+            <!-- Menu déroulant pour ajouter une langue -->
+            <%= select_tag :language_id, options_from_collection_for_select(Language.all - @user.languages, :id, :language), class: "selectpicker w-100", 'data-live-search' => 'true' %>
+          </div>
+          <%= f.submit "Add Language", class: "btn btn-outline-primary mt-3" %>
+        <% end %>
+
+      </div>
+    </div>
+  </div>
 </div>
