--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,17 +1,20 @@
-
-.btn-primary {
-  background-color: #FD3967;
-  border-color: #FD3967;
+.btn {
   color: #ffffff;
   padding: 8px 16px;
   border-radius: 5px;
+
+  &:hover{
+    color: #ffffff !important; // Assure que le texte du bouton est toujours blanc
+  }
 }
 
-.btn-primary:hover {
+.btn-primary:hover, .btn-danger:hover {
   background-color: #e53b5c;
   border-color: #e23658;
 }
 
-.btn-primary {
-  color: #ffffff !important; // Assure que le texte du bouton est toujours blanc
+.btn-primary, .btn-danger {
+  background-color: #FD3967;
+  border-color: #FD3967;
+  // color: #ffffff !important; // Assure que le texte du bouton est toujours blanc
 }
