--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,28 +1,35 @@
 <%= render 'users/navbar' %>
 
-<h1>Pending matches</h1>
+<div class="container">
+  <h1>Pending matches</h1>
+  <div class="match-notification-container">
+    <% @pending_matches.each do |match| %>
+      <div class="match-notification card" data-controller="manage-matches" data-manage-matches-match-value="<%= match.id.to_json %>" >
+        <p><span class="text-primary"><%= match.initiated_by.first_name %></span> vous propose un match !</p>
 
-<% @pending_matches.each do |match| %>
-  <div class="match-notification" data-controller="manage-matches" data-manage-matches-match-value="<%= match.id.to_json %>" >
-    <p><span class="text-primary"><%= match.initiated_by.first_name %></span> vous propose un match !</p>
+        <div>
+          <button class="btn btn-success" value="accepted" data-action="click->manage-matches#accept_or_refuse_match">
+            Accepter <i class="fa-solid fa-check"></i>
+          </button>
+          <button class="btn btn-danger" value="refused" data-action="click->manage-matches#accept_or_refuse_match">
+            Refuser <i class="fa-solid fa-xmark"></i>
+          </button>
+        </div>
+      </div>
+    <% end %>
+  </div>
 
-    <div>
-      <button class="btn btn-secondary" value="accepted" data-action="click->manage-matches#accept_or_refuse_match">Accepter</button>
-      <button class="btn btn-primary" value="refused" data-action="click->manage-matches#accept_or_refuse_match">Refuser</button>
+  <h1>Accepted matches</h1>
+  <% @accepted_matches.each do |match| %>
+    <div class="match-notification" >
+      <p><span class="text-primary"><%= match.initiated_by.first_name %></span> : c'est un match !</p>
     </div>
-  </div>
-<% end %>
+  <% end %>
 
-<h1>Accepted matches</h1>
-<% @accepted_matches.each do |match| %>
-  <div class="match-notification" >
-    <p><span class="text-primary"><%= match.initiated_by.first_name %></span> : c'est un match !</p>
-  </div>
-<% end %>
-
-<h1>Refused matches</h1>
-<% @refused_matches.each do |match| %>
-  <div class="match-notification" >
-    <p><span class="text-primary"><%= match.initiated_by.first_name %></span> : match refusé.</p>
-  </div>
-<% end %>
+  <h1>Refused matches</h1>
+  <% @refused_matches.each do |match| %>
+    <div class="match-notification" >
+      <p><span class="text-primary"><%= match.initiated_by.first_name %></span> : match refusé.</p>
+    </div>
+  <% end %>
+</div>
