--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,11 +1,13 @@
 <%= render 'users/navbar' %>
 
 <div class="container">
-  <h1>Pending matches</h1>
   <div class="match-notification-container">
     <% @pending_matches.each do |match| %>
       <div class="match-notification card" data-controller="manage-matches" data-manage-matches-match-value="<%= match.id.to_json %>" >
-        <p><span class="text-primary"><%= match.initiated_by.first_name %></span> vous propose un match !</p>
+        <div class="d-flex align-items-center">
+          <%= link_to image_tag(match.initiated_by.photo.attached? ? match.initiated_by.photo : 'default_avatar.png', class: "avatar me-2"), user_path(match.initiated_by) %>
+          <p><span class="text-primary"><%= match.initiated_by.first_name %> <%= match.initiated_by.last_name %></span> vous propose un match !</p>
+        </div>
 
         <div>
           <button class="btn btn-success" value="accepted" data-action="click->manage-matches#accept_or_refuse_match">
