front homepage updated

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,10 +8,12 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 60px !important;
+  height: 60px !important;
 }
 
 .nav-item {
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+  display: flex;
+  align-items: center; // Centre les éléments verticalement dans la navbar
 }
