--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag 'logo_aupair.png', alt: 'Aupair Match Logo' %>
+      <%= image_tag 'amp_logo.png', alt: 'Aupair match Logo' %>
     <% end %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,6 +20,8 @@
         </li>
         <li class="nav-item active">
             <%= link_to 'Sign in', new_user_session_path, class: "btn btn-outline-primary" %>
+        <li class="nav-item active">
+            <%= link_to 'Sign up', new_user_session_path, class: "btn btn-outline-primary btn-signup" %>
         </li>
       </ul>
     </div>
