--- a/app/views/users/_navbar.html.erb
+++ b/app/views/users/_navbar.html.erb
@@ -3,7 +3,7 @@
   <div class="container-fluid"> <!-- Utilisation d'un container-fluid pour occuper toute la largeur -->
     <!-- Logo cliquable avec lien vers la page d'accueil ou autre -->
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag 'logo_aupair.png', alt: 'Aupair Match Logo' %>
+      <%= image_tag 'amp_logo.png', alt: 'Aupair match logo' %>
     <% end %>
 
     <!-- Bouton pour mobile (menu hamburger) -->
