--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -117,7 +117,7 @@
     <div class="col-md-6">
       <div class="form-item">
         <h3>Your Availabilities</h3>
-        <ul class="list-group">
+        <ul class="list-group scrollable-list">
           <% @user.availabilities.each do |availability| %>
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <span>
@@ -145,7 +145,7 @@
         </ul>
 
         <!-- Formulaire pour ajouter une nouvelle disponibilité -->
-        <h4 class="mt-5">Add Availability</h4>
+        <h4 class="mt-3">Add Availability</h4>
         <%= simple_form_for @user, url: user_path(@user), method: :patch, local: true do |f| %>
           <%= f.simple_fields_for :availabilities, @user.availabilities.build do |new_availability_form| %>
             <div class="form-group">
@@ -167,7 +167,7 @@
         <div>
           <h3>Spoken Languages</h3>
           <!-- Liste des langues actuellement parlées -->
-          <ul class="list-group mb-3">
+          <ul class="list-group scrollable-list">
             <% @user.languages.each do |language| %>
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 <span><%= language.language %></span>
@@ -191,8 +191,10 @@
           </div>
           <%= f.submit "Add Language", class: "btn btn-outline-primary mt-3" %>
         <% end %>
-
       </div>
     </div>
+  </div>
+  <div class="text-center mt-5 mb-5">
+    <%= link_to 'Back to Users List', users_path, class: 'btn btn-primary' %>
   </div>
 </div>
