Fix index and show display

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
 @import "pages/home";
 @import "pages/edit";
 @import "components/loginpage";
-@import "components/aupair_show";
+@import "components/show";
 
 // Mapbox css
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css");
