--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <%= render 'navbar' %>
 
 <div class="container-hero">
-  <div class="row m-0">
+  <div class="row hero-row m-0">
     <!-- Colonne 1 : Texte Hero -->
     <div class="col-md-6 col-hero">
       <div class="hero">
